feat(ui feedback): below are the result of my squashed commits - feat(index page):add dark overlay on image to make text visible 	[Start #165355004] - feat(logo):reduce banka logo in header  to 40px - feat(header):change header color to the same as footer - feat(signup):reduce fields needed for signup - feat(edit profile):add new edit_profile page - feat(staff-dashboard):make each account-list field change background on hover - feat(header):add user-icons to header next to users name - feat(logout-button):make logout button toggle without shifting user name - feat(signin-signup):make signin and signup buttons toggle without shifting each other - feat(signin-form):implement feedback to signin form - feat(account-record):implement some feedback to bank-account-record page 	- style activate-deactivate and delete button 	- add icon which will bring up modal when clicked 	- style the borders of the various sections to make them more pronounced 	- change the colors of the various information fields to red - feat(account record):finish up UI changes to bank-account record page 	- add modal for deposit or withdrawal which will pop up after atm-card icon is clicked 	- add modal for delete account which will pop up when delete button is clicked - feat(staff end): complete remaining feedback changes for staff interface 	- delete credit account and debit account pages since modal covers them already 	- remove password field for creating staff or admin account - feat(user dashboard):implement UI changes for user dashboard 	- remove irrelevant fields from profile details section 	- change information field colors to red 	- add pencil icon to act as button for editing account details 	- use modal to implement form for updating account details 	[Finishes #165355004]

--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -36,6 +36,7 @@ select {
   border: 1px solid #9ec7e0;
   display: block;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 main {
@@ -45,7 +46,7 @@ main {
 /******** HEADER *******/
 
 header {
-  background: #9ec7e0;
+  background: #013144;
   height: 100px;
 }
 
@@ -60,12 +61,12 @@ header {
 
 #header-title h1 {
   margin-bottom: 0;
-  line-height: 150%;
+  line-height: 100px;
   text-decoration: none;
   text-transform: uppercase;
   color: #e8ebec;
-  font-size: 50px;
-  margin-top: 15px;
+  font-size: 40px;
+  margin-top: 0;
 }
 
 #header-links {
@@ -77,9 +78,9 @@ header {
   display: none;
 }
 
-.pre-login-link {
+/* .pre-login-link {
   padding-left: 10px;
-}
+} */
 
 .pre-login-link:hover {
   font-weight: bold;
@@ -89,6 +90,11 @@ header {
   text-decoration: none;
   color: #e8ebec;
   font-size: 16px;
+  width: 50px;
+}
+
+#header-links p.login-signup {
+  width: 70px;
 }
 
 #header-links p {
@@ -98,6 +104,7 @@ header {
   font-size: 16px;
   margin: 0;
   float: left;
+  width: 130px;
 }
 
 #logout {
@@ -124,6 +131,12 @@ header {
   background-size: cover;
   text-align: center;
   color: #ffffff;
+}
+
+#overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #homepage h1 {
@@ -217,6 +230,11 @@ header {
 
 /****** ALL PAGES WITH FORMS *****/
 
+#login-form {
+  min-height: calc(100vh - 320px);
+  padding-top: 100px;
+}
+
 .all-form {
   max-width: 450px;
   height: fit-content;
@@ -248,9 +266,36 @@ header {
 #admin-link {
   color: #616262;
   text-align: center;
+  text-decoration: underline;
 }
 
 /****************** DASHBOARD PAGE **********************/
+#update-account-overlay {
+  position: fixed; 
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
+}
+
+#update-overlay-content{
+  position: absolute;
+  display: block;
+  min-width: 350px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 10%;
+  bottom: 35%;
+  height: 520px;
+  padding: 20px;
+  background-color: #e8ebec;
+}
 
 /******* ACCOUNT DETAILS SECTION *******/
 
@@ -281,7 +326,7 @@ header {
   margin: 0 auto;
   overflow: auto;
   padding: 20px;
-  border: 2px solid #ffffff;
+  border: 2px solid #616263;
   background-color: #ffffff;
 }
 
@@ -314,6 +359,15 @@ header {
   color: #616263;
 }
 
+.dashboard-section-title i {
+  float: right;
+  font-size: 25px;
+}
+
+#profile .details-div p span {
+  color: #f84e4e;
+}
+
 #profile .details-div p {
   width: 100%;
   height: 50px;
@@ -324,6 +378,10 @@ header {
 }
 
 /****** TRANSACTION HISTORY ********/
+
+#transaction-history-div {
+  padding-top: 0;
+}
 
 #trnsc-hstr .details-div p {
   /* width: 100%; */
@@ -336,8 +394,19 @@ header {
   margin-bottom: 0px;
 }
 
+#transaction-history-div p.trans-hist-title {
+  height: 50px;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 50px;
+  border-bottom: 1px solid #616263;
+  color: #f84e4e;
+  text-transform: uppercase;
+}
+
 #trnsc-hstr .trns-hist-details {
   height: 270px;
+  overflow: auto;
 }
 
 .details-div ul {
@@ -385,6 +454,10 @@ header {
   font-size: 18px;
   margin-top: 0;
   margin-bottom: 10px;
+}
+
+#transaction .details-div p span {
+  color: #f84e4e;
 }
 
 #trans-bck-btn {
@@ -444,14 +517,20 @@ header {
 }
 
 #accounts-list .accounts-list-div .acc-list-title {
-  font-size: 13px;
-  line-height: 30px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 50px;
   border-bottom: 1px solid #616263;
-  color: #616263;
+  color: #f84e4e;
   text-transform: uppercase;
 }
 
-#accounts-list .accounts-list-div p {
+.indiv-acc:hover p {
+  background-color: #e8ebec;
+ }
+
+.accounts-list-div p {
   line-height: 50px;
   color: #013144;
   border-bottom: 1px solid #013144;
@@ -464,6 +543,8 @@ header {
   height: 500px;
   overflow: auto;
 }
+
+
 
 .accounts-list-div ul {
   padding: 0;
@@ -494,6 +575,83 @@ header {
 }
 
 /****** ACCOUNT RECORD PAGE *******/
+#perform-transaction-overlay {
+  position: fixed; 
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
+}
+
+#trans-overlay-content {
+  position: absolute;
+  display: none;
+  min-width: 350px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 35%;
+  bottom: 35%;
+  height: 230px;
+  padding: 20px;
+  background-color: #e8ebec;
+}
+
+#delete-account-modal {
+  position: absolute;
+  display: none;
+  z-index: 2;
+  width: 250px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 35%;
+  bottom: 35%;
+  height: 150px;
+  padding: 20px;
+  background-color: #e8ebec;
+  border: 1px solid #616262;
+}
+
+#delete-account-modal p {
+  color: #f84e4e;
+  text-align: center;
+  font-size: 20px;
+
+}
+
+#no {
+  background-color: #9ec7e0;
+  border: 1px solid #9ec7e0;
+}
+
+#yes {
+  background-color: #f84e4e;
+  border: 1px solid #f84e4e;
+  margin-left: 20px;
+}
+
+#delete-account-modal button {
+  height: 40px;
+  font-size: 16px;
+  color: #e8ebec;
+  width: 40%;
+  float: left;
+  font-weight: bold;
+  border: none;
+  border-radius: 6px;
+  text-transform: uppercase;
+  margin-right: 10px;
+}
+
+#account-record .details-div p span {
+  color: #f84e4e;
+}
+
 #account-record .details-div p {
   width: 100%;
   height: 50px;
@@ -504,12 +662,14 @@ header {
 }
 
 .acc-rec-btn {
-  height: 50px;
-  font-size: 18px;
+  height: 40px;
+  font-size: 16px;
   color: #e8ebec;
-  width: 45%;
+  width: 35%;
   float: left;
-  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 6px;
+  text-transform: uppercase
 }
 
 .delete-acc-btn {
