feat(frontend):implement the LFA's second feedback for UI
- better box shadow colors for homepage buttons
- place signup form fields ontop of each other
- implement feedback changes to user dashboard page
- create separate transaction history page
- implement modal design for transaction details
- implement feedback changes to bank record page

[Finishes #165434516]

--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -37,6 +37,7 @@ select {
   display: block;
   margin: 0 auto;
   cursor: pointer;
+  outline: none;
 }
 
 main {
@@ -164,8 +165,10 @@ header {
   margin: 5px;
   font-size: 18px;
   text-align: center;
-  box-shadow: 1px 1px 8px #ffffff;
+  box-shadow: 2px 2px 8px #8c8f93;
   border-radius: 5px;
+  cursor: pointer;
+  outline: none;
 }
 
 .signup-btn {
@@ -193,18 +196,18 @@ header {
   color: #616263;
 }
 
-#signup-form {
+/* #signup-form {
   max-width: 700px;
-}
+} */
 
 #signup-form form {
-  margin-bottom: 20px;
-  margin-top: 25px;
+  /* margin-bottom: 20px; */
+  margin-top: 15px;
 }
 
-#signup-form button {
+/* #signup-form button {
   width: 350px;
-}
+} */
 
 #signup-form h3 {
   margin: 0 0 5px 0;
@@ -290,11 +293,42 @@ header {
   min-width: 350px;
   left: 50%;
   transform: translateX(-50%);
-  top: 10%;
+  top: 5%;
   bottom: 35%;
-  height: 520px;
+  height: 560px;
   padding: 20px;
   background-color: #e8ebec;
+}
+
+#pen-icon {
+  cursor: pointer;
+}
+
+.modal-title {
+  max-width: 100%;
+  text-align: left;
+  margin: 0 auto 10px auto;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #616263;
+}
+
+#close-modal {
+  float: right;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.dashboard #list-icon {
+  line-height: 45px;
+}
+
+#list-icon {
+  float: right;
+    /* line-height: 45px; */
+    font-size: 25px;
+    margin-left: 20;
+    color: #616263;
 }
 
 /******* ACCOUNT DETAILS SECTION *******/
@@ -362,10 +396,12 @@ header {
 .dashboard-section-title i {
   float: right;
   font-size: 25px;
+  cursor: pointer;
 }
 
 #profile .details-div p span {
-  color: #f84e4e;
+  color: #71a9d6;
+  font-weight: bold;
 }
 
 #profile .details-div p {
@@ -382,6 +418,53 @@ header {
 #transaction-history-div {
   padding-top: 0;
 }
+
+#transaction-history-overlay {
+  position: fixed; 
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
+}
+
+#transaction-history-overlay-content{
+  position: absolute;
+  display: block;
+  min-width: 280px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 20%;
+  bottom: 35%;
+  height: 350px;
+  padding: 20px;
+  background-color: #e8ebec;
+}
+
+#transaction-history-overlay-content div span {
+  color: #71a9d6;
+  font-weight: bold;
+}
+
+#transaction-history-overlay-content div p {
+  width: 100%;
+  height: 30px;
+  color: #013144;
+  font-size: 16px;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+
+.acc-list-details .indiv-trans:hover p {
+  background-color: #e8ebec;
+  cursor: pointer;
+ }
 
 #trnsc-hstr .details-div p {
   /* width: 100%; */
@@ -407,6 +490,12 @@ header {
 #trnsc-hstr .trns-hist-details {
   height: 270px;
   overflow: auto;
+}
+
+.indiv-trans p {
+  width: 25%;
+  float: left;
+  text-align: center;
 }
 
 .details-div ul {
@@ -522,7 +611,7 @@ header {
   font-weight: bold;
   line-height: 50px;
   border-bottom: 1px solid #616263;
-  color: #f84e4e;
+  color: #71a9d6;
   text-transform: uppercase;
 }
 
@@ -586,7 +675,6 @@ header {
   bottom: 0;
   background-color: rgba(0,0,0,0.5);
   z-index: 2;
-  cursor: pointer;
 }
 
 #trans-overlay-content {
@@ -597,7 +685,7 @@ header {
   transform: translateX(-50%);
   top: 35%;
   bottom: 35%;
-  height: 230px;
+  height: 255px;
   padding: 20px;
   background-color: #e8ebec;
 }
@@ -618,7 +706,7 @@ header {
 }
 
 #delete-account-modal p {
-  color: #f84e4e;
+  color: #111;
   text-align: center;
   font-size: 20px;
 
@@ -646,10 +734,13 @@ header {
   border-radius: 6px;
   text-transform: uppercase;
   margin-right: 10px;
+  outline: none;
+  cursor: pointer;
 }
 
 #account-record .details-div p span {
-  color: #f84e4e;
+  color: #71a9d6;
+  font-weight: bold;
 }
 
 #account-record .details-div p {
@@ -663,13 +754,15 @@ header {
 
 .acc-rec-btn {
   height: 40px;
-  font-size: 16px;
+  font-size: 12px;
   color: #e8ebec;
   width: 35%;
   float: left;
   font-weight: bold;
-  border-radius: 6px;
-  text-transform: uppercase
+  border-radius: 5px;
+  text-transform: uppercase;
+  outline: none;
+  cursor: pointer;
 }
 
 .delete-acc-btn {
@@ -869,7 +962,7 @@ footer p {
   /****/
 
   #accounts-list .accounts-list-div p {
-    font-size: 12px;
+    font-size: 16px;
   }
 
   /***** Account Record ****/
