chore(transaction modal):refactor transaction details modal logic

--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -421,7 +421,7 @@ header {
 
 #transaction-history-overlay {
   position: fixed; 
-  display: block;
+  display: none;
   width: 100%;
   height: 100%;
   top: 0; 
