--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -288,6 +288,7 @@ header {
 }
 
 #update-overlay-content{
+  border-radius: 5px;
   position: absolute;
   display: block;
   min-width: 350px;
@@ -295,7 +296,7 @@ header {
   transform: translateX(-50%);
   top: 5%;
   bottom: 35%;
-  height: 560px;
+  height: 570px;
   padding: 20px;
   background-color: #e8ebec;
 }
@@ -306,8 +307,8 @@ header {
 
 .modal-title {
   max-width: 100%;
-  text-align: left;
-  margin: 0 auto 10px auto;
+  text-align: center;
+  margin: 0 auto 20px auto;
   text-transform: uppercase;
   font-weight: 500;
   color: #616263;
@@ -315,7 +316,7 @@ header {
 
 #close-modal {
   float: right;
-  font-size: 25px;
+  font-size: 15px;
   cursor: pointer;
 }
 
@@ -434,16 +435,17 @@ header {
 }
 
 #transaction-history-overlay-content{
+  border-radius: 5px;
   position: absolute;
   display: block;
-  min-width: 280px;
+  min-width: 350px;
   left: 50%;
   transform: translateX(-50%);
   top: 20%;
   bottom: 35%;
-  height: 350px;
+  height: 320px;
   padding: 20px;
-  background-color: #e8ebec;
+  background-color: #fff;
 }
 
 #transaction-history-overlay-content div span {
@@ -453,13 +455,23 @@ header {
 
 #transaction-history-overlay-content div p {
   width: 100%;
-  height: 30px;
+  line-height: 25px;
   color: #013144;
   font-size: 16px;
   margin-top: 0;
+  padding-left: 20px;
   margin-bottom: 10px;
 }
 
+.modal-full-div {
+  width: 100%;
+}
+
+.modal-half-div {
+  width: 50%;
+  float: left;
+}
+/*** *** *** *** *** ***/
 
 .acc-list-details .indiv-trans:hover p {
   background-color: #e8ebec;
@@ -685,9 +697,10 @@ header {
   transform: translateX(-50%);
   top: 35%;
   bottom: 35%;
-  height: 255px;
+  height: 210px;
   padding: 20px;
   background-color: #e8ebec;
+  border-radius: 5px;
 }
 
 #delete-account-modal {
