feat(fetch transaction-history):implement transaction history functionality on the front-end
[Finishes #166049878]

--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -474,6 +474,13 @@ header {
   margin-bottom: 10px;
 }
 
+#view-more {
+  text-align: center;
+  text-decoration: underline;
+  color: #013144;
+  cursor: pointer;
+}
+
 .modal-full-div {
   width: 100%;
 }
